Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8883

Source/header switching not working if header, source not in same directory

    XMLWordPrintable

Details

    • adee8336bbc1365149dbcd33b0e05a2096c4dfa8

    Description

      I have the following directory structure:

      foo/include/foo/bar.hpp
      foo/src/bar.cpp

      Opening bar.cpp and pressing f4 does not switch to bar.hpp, or the other way around (if the files are not opened as part of a project). This is true regardless of having

      #include <foo/bar.hpp>
      #include <bar.hpp>
      #include "../include/foo/bar.hpp"

      in bar.cpp. At least in the last case, switching from the cpp file to the hpp file could work.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            orgads Orgad Shaneh
            rggjan Jan Rüegg
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes